# literary-engineering-project-skill

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  SKILL.md  agentread.yaml  project.yaml  pyproject.toml
docs/: mvp-spec.md  roadmap.md
frontend/: app.js  index.html  styles.css
references/: agent-run-protocol.md  artifact-contracts.md  cli-run-protocol.md  file-format-export.md  formal-host-operating-constitution.md  orchestration.md  project-director-playbook.md  punctuation-standard.md  workflows.md
schemas/: agent_completion.v1.json  agent_submission.v1.json  agent_task.v1.json  canon_patch.v1.json  chapter_obligation_contract.v1.json  context_trace.v1.json  prompt_asset.v1.json  reader_experience_contract.v1.json  workflow_event.v1.json  workflow_state.v1.json
templates/: character.yaml  review-report.md  scene.yaml
tests/: helpers.py  test_agent_provider.py  test_agent_schema.py  test_agent_task_status.py  test_agentic_workflows.py  test_api_server.py  test_approval.py  test_asset_workshop.py  test_branch_lab.py  test_candidate_promotion.py  test_canon_evolver.py  test_canon_lint.py  test_chapter_pipeline.py  test_character_state_apply.py  test_character_state_evolver.py  test_dify_dsl.py  test_director_agent.py  test_docx_export.py  test_export_package.py  test_generation_provider.py  test_initializer.py  test_knowledge_store.py  test_langgraph_adapter.py  test_longform_audit.py  test_memory_context.py  test_model_config.py  test_narrative_rhythm.py  test_orchestration_blueprint.py  test_project_integrity.py  test_prompt_registry.py  (+19 more)
(+242 files in other folders)
